@@ -1,4 +1,9 @@
+#ifdef HAVE_CONFIG_H
+    #include "config.h"
+#endif
+
 #include <cstdio>
+#include <memory>
 
 #include "stubServer.h"
 #include "testUtils.h"
@@ -14,6 +19,9 @@
 using namespace Eris;
 using std::endl;
 using std::cout;
+
+typedef std::auto_ptr<Eris::Connection> AutoConnection;
+typedef std::auto_ptr<Eris::Player> AutoPlayer;
 
 class SignalCounter0 : public SigC::Object
 {
@@ -48,6 +56,7 @@ public:
     
     int fireCount() const
     { return m_count; }
+    
 private:
     int m_count;
 };
@@ -57,17 +66,13 @@ void erisLog(Eris::LogLevel, const std::string& msg)
     cout << "ERIS: " << msg << endl;
 }
 
-void testLogin(StubServer& stub)
+AutoConnection stdConnect(StubServer& stub)
 {
-    
-    Eris::Connection* con = new Eris::Connection("eris-test", false);
-    Eris::Player *player = new Eris::Player(con);
+    AutoConnection con(new Eris::Connection("eris-test", false));
+    SignalCounter0 connectCount;
+    con->Connected.connect(SigC::slot(connectCount, &SignalCounter0::fired));
     
     con->connect("localhost", 7450);
-    
-    SignalCounter0 loginCount, connectCount;
-    player->LoginSuccess.connect(SigC::slot(loginCount, &SignalCounter0::fired));
-    con->Connected.connect(SigC::slot(connectCount, &SignalCounter0::fired));
     
     while (!connectCount.fireCount())
     {
@@ -76,8 +81,42 @@ void testLogin(StubServer& stub)
     }
     
     assert(con->isConnected());
-    SignalCounter1<const std::string&> loginErrorCounter;
+    return con;
+}
+
+AutoPlayer stdLogin(const std::string& uname, const std::string& pwd, StubServer& stub, Eris::Connection* con)
+{
+    AutoPlayer player(new Eris::Player(con));
     
+    SignalCounter0 loginCount;
+    player->LoginSuccess.connect(SigC::slot(loginCount, &SignalCounter0::fired));
+   
+    SignalCounter1<const std::string&> loginErrorCounter;
+    player->LoginFailure.connect(SigC::slot(loginErrorCounter, &SignalCounter1<const std::string&>::fired));
+    
+    player->login(uname, pwd);
+
+    while (!loginCount.fireCount() && !loginErrorCounter.fireCount())
+    {
+        stub.run();
+        Eris::PollDefault::poll();
+    }
+    
+    assert(loginErrorCounter.fireCount() == 0);
+    return player;
+}
+
+#pragma mark -
+
+void testLogin(StubServer& stub)
+{
+    AutoConnection con = stdConnect(stub);
+    AutoPlayer player(new Eris::Player(con.get()));
+    
+    SignalCounter0 loginCount;
+    player->LoginSuccess.connect(SigC::slot(loginCount, &SignalCounter0::fired));
+   
+    SignalCounter1<const std::string&> loginErrorCounter;
     player->LoginFailure.connect(SigC::slot(loginErrorCounter, &SignalCounter1<const std::string&>::fired));
     
     player->login("account_A", "pumpkin");
@@ -93,39 +132,64 @@ void testLogin(StubServer& stub)
     cout << "login success" << endl;
     assert(player->getID() == "_23_account_A");
     assert(player->isLoggedIn());
+}
+
+void testBadLogin(StubServer& stub)
+{
+    AutoConnection con = stdConnect(stub);
+    AutoPlayer player(new Eris::Player(con.get()));
     
-    delete player;
-    delete con;
+    SignalCounter0 loginCount;
+    player->LoginSuccess.connect(SigC::slot(loginCount, &SignalCounter0::fired));
+   
+    SignalCounter1<const std::string&> loginErrorCounter;
+    player->LoginFailure.connect(SigC::slot(loginErrorCounter, &SignalCounter1<const std::string&>::fired));
+    
+    player->login("account_B", "zark!!!!ojijiksapumpkin");
+
+    while (!loginCount.fireCount() && !loginErrorCounter.fireCount())
+    {
+        stub.run();
+        Eris::PollDefault::poll();
+    }
+    
+    assert(loginErrorCounter.fireCount() == 1);
+    assert(loginCount.fireCount() == 0);
+    
+    assert(!player->isLoggedIn());
+}
+
+void testAccCreate(StubServer& stub)
+{
+    AutoConnection con = stdConnect(stub);
+    AutoPlayer player(new Eris::Player(con.get()));
+    
+    SignalCounter0 loginCount;
+    player->LoginSuccess.connect(SigC::slot(loginCount, &SignalCounter0::fired));
+
+    SignalCounter1<const std::string&> loginErrorCounter;
+    player->LoginFailure.connect(SigC::slot(loginErrorCounter, &SignalCounter1<const std::string&>::fired));
+    
+    player->createAccount("account_C", "John Doe", "lemon");
+
+    while (!loginCount.fireCount() && !loginErrorCounter.fireCount())
+    {
+        stub.run();
+        Eris::PollDefault::poll();
+    }
+    
+    assert(loginErrorCounter.fireCount() == 0);
+    
+    cout << "create account success, ID is " << player->getID() << endl;
+    assert(player->getUsername() == "account_C");
+    assert(player->isLoggedIn());
 }
 
 void testAccountCharacters(StubServer& stub)
 {
-    Eris::Connection* con = new Eris::Connection("eris-test", false);
-    Eris::Player *player = new Eris::Player(con);
-    
-    con->connect("localhost", 7450);
-    
-    SignalCounter0 loginCount;
-    player->LoginSuccess.connect(SigC::slot(loginCount, &SignalCounter0::fired));
-    
-    while (!con->isConnected())
-    {
-        stub.run();
-        Eris::PollDefault::poll();
-    }
-    
-    SignalCounter1<const std::string&> loginErrorCounter;
-        
-    player->login("account_B", "sweede");
+    AutoConnection con = stdConnect(stub);
+    AutoPlayer player = stdLogin("account_B", "sweede", stub, con.get());
 
-    while (!loginCount.fireCount())
-    {
-        stub.run();
-        Eris::PollDefault::poll();
-    }
-    
-    assert(player->isLoggedIn());
-    
     SignalCounter0 gotChars;
     player->GotAllCharacters.connect(SigC::slot(gotChars, &SignalCounter0::fired));
     player->refreshCharacterInfo();
@@ -141,9 +205,24 @@ void testAccountCharacters(StubServer& stub)
     CharacterMap::const_iterator C = chars.find("acc_b_character");
     assert(C != chars.end());
     assert(C->second->getName() == "Joe Blow");
+}
+
+void testLogout(StubServer& stub)
+{
+    AutoConnection con = stdConnect(stub);
+    AutoPlayer player = stdLogin("account_C", "lemon", stub, con.get());
     
-    delete player;
-    delete con;
+    SignalCounter1<bool> gotLogout;
+    player->LogoutComplete.connect(SigC::slot(gotLogout, &SignalCounter1<bool>::fired));
+    player->logout();
+    
+    while (gotLogout.fireCount() == 0)
+    {
+        stub.run();
+        Eris::PollDefault::poll();
+    }
+    
+    assert(!player->isLoggedIn());
 }
 
 int main(int argc, char **argv)
@@ -154,6 +233,9 @@ int main(int argc, char **argv)
     try {    
         StubServer stub(7450);
         testLogin(stub);
+        testBadLogin(stub);
+        testAccCreate(stub);
+        testLogout(stub);
         testAccountCharacters(stub);
     }
     catch (TestFailure& tfexp)
